src/fixtures/errors/error.lua
function f()
  error("unknown error")
  return true
end

return f
